ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kwetter-ingress
  annotations:
    ingress.gcp.kubernetes.io/pre-shared-cert: mcrt-10d4da0b-3d04-49e7-963f-2b95928989a6
spec:
  rules:
  - http:
      paths:
      - path: /api/*
        backend:
          serviceName: kwetter-gateway-api
          servicePort: 8080
      - path: /*
        backend:
          serviceName: kwetter-frontend-service
          servicePort: 8080
